Beginning to create ggplot for Question 1 (experiencing phantom "unable to start png device" error)

--- a/Homework 4 Code.Rmd
+++ b/Homework 4 Code.Rmd
@@ -14,9 +14,18 @@ library(ggpubr)
 library(kableExtra)
 ```
 
+
 ```{r}
 #Question 1
 ##Read in the damages.csv file
 damages <- read.csv(here("data", "damages.csv"))
+
+##Read in the warming.csv file
+warming <- read.csv(here("data", "warming.csv"))
+
+##Create data visualization of damages.csv data
+ggplot(data = damages, aes (x = warming, y = damages))+
+  geom_point() +
+  theme_minimal()
 ```
 
