Creating trendline for the damages graph

--- a/Homework 4 Code.Rmd
+++ b/Homework 4 Code.Rmd
@@ -26,6 +26,7 @@ warming <- read.csv(here("data", "warming.csv"))
 ##Create data visualization of damages.csv data
 ggplot(data = damages, aes (x = warming, y = damages))+
   geom_point() +
+  geom_smooth(data=damages, aes(x=warming, y=damages))+
   theme_minimal()
 ```
 
