--- a/Homework 4 Code.Rmd
+++ b/Homework 4 Code.Rmd
@@ -21,17 +21,71 @@ library(kableExtra)
 damages <- read.csv(here("data", "damages.csv")) %>% 
   mutate(warm2 = warming^2)
 
-##Create a linear model to find the equation in the damages data table
+##Create a linear model to find the estimated damage function in the damages data table
 damages_lm <- lm(damages ~ warming + warm2, data = damages)
 damages_lm[["coefficients"]][["(Intercept)"]] <- 0
-
-##Read in the warming.csv file
-warming <- read.csv(here("data", "warming.csv"))
 
 ##Create data visualization of damages.csv data
 ggplot(data = damages, aes (x = warming, y = damages))+
   geom_point() +
   geom_smooth(data=damages, aes(x=warming, y=damages))+
+  annotate(geom = "text", label = "y = (-1.95 * 10^-13) - (3.07 * 10^-12") +
+  theme_minimal()
+```
+
+
+```{r}
+#Question 2
+##Read in the warming.csv file
+warming <- read.csv(here("data", "warming.csv"))
+
+##Use the warming file and estimated damage function from Question 1 to create four plots
+###Damages Over Time without the Pulse
+ggplot(data = warming, aes(x = year, y = warming_baseline))+
+  geom_point()+
+  theme_minimal()
+```
+
+
+```{r}
+#Question 2
+##Use the warming file and estimated damage function from Question 1 to create four plots
+###Damages Over Time with the Pulse
+ggplot(data = warming, aes(x = year,y = warming_pulse))+
+  geom_point()+
+  theme_minimal()
+```
+
+
+```{r}
+#Question 2
+##Use the warming file and estimated damage function from Question 1 to create four plots
+###Using the damages lm from Question 1, isolate the coefficient values to create this next graph.
+x <- damages_lm[["coefficents"]][["warming"]]
+x2 <- damages_lm[["coefficients"]][["warm2"]]
+intercept <- damages_lm[["coefficients"]][["(Intercept)"]]
+
+###Find the Difference in Damages over Time that Arise from the Pulse. After finding the difference, divide the difference by 35 billion tons of carbon which is roughly equal to the amount of annual global emissions
+warming_difference <- warming %>%
+  mutate(damage_base = (warming_baseline * x) + ((warming_baseline)^2 * x2) + intercept,
+         damage_pulse = (warming_pulse * x) + ((warming_pulse)^2 * x2) + intercept,
+         damage_difference = ((damage_pulse - damage_base)),
+         damage_annual_cost = damage_difference/35000000000
+         )
+
+###Difference in Damages over Time that Arise from the Pulse
+ggplot(data = warming, aes(x = year,y = warming_pulse))+
+  geom_point()+
+  theme_minimal()
+```
+
+
+```{r}
+#Question 2
+##Use the warming file and estimated damage function from Question 1 to create four plots
+###Difference in Damages over Time from Pulse Per Ton of Carbon
+ggplot(data = warming, aes(x = year,y = warming_pulse))+
+  geom_point()+
   theme_minimal()
 ```
 
