--- a/Homework 4 Code.Rmd
+++ b/Homework 4 Code.Rmd
@@ -29,7 +29,7 @@ damages_lm[["coefficients"]][["(Intercept)"]] <- 0
 ggplot(data = damages, aes (x = warming, y = damages))+
   geom_point() +
   geom_smooth(data=damages, aes(x=warming, y=damages))+
-  annotate(geom = "text", label = "y = (-1.95 * 10^-13) - (3.07 * 10^-12") +
+  annotate(geom = "text", x = 2.5, y = 100000000000000, label = "y = (-1.95 * 10^-13) - (3.07 * 10^-12)") +
   theme_minimal()
 ```
 
