--- a/Homework 4 Code.Rmd
+++ b/Homework 4 Code.Rmd
@@ -29,7 +29,7 @@ damages_lm[["coefficients"]][["(Intercept)"]] <- 0
 ggplot(data = damages, aes (x = warming, y = damages))+
   geom_point() +
   geom_smooth(data=damages, aes(x=warming, y=damages))+
-  annotate(geom = "text", x = 2.5, y = 100000000000000, label = "y = (-1.95 * 10^-13) - (3.07 * 10^-12)") +
+  annotate(geom = "text", x = 3.5, y = 1000000000000000, label = "y = (-1.95 * 10^-13) - (3.07 * 10^-12)") +
   theme_minimal()
 ```
 
@@ -72,9 +72,10 @@ warming_difference <- warming %>%
          damage_difference = ((damage_pulse - damage_base)),
          damage_annual_cost = damage_difference/35000000000
          )
+##Need to fix because of mutate error
 
 ###Difference in Damages over Time that Arise from the Pulse
-ggplot(data = warming, aes(x = year,y = warming_pulse))+
+ggplot(data = warming, aes(x = year,y = damage_difference))+
   geom_point()+
   theme_minimal()
 ```
@@ -84,7 +85,7 @@ ggplot(data = warming, aes(x = year,y = warming_pulse))+
 #Question 2
 ##Use the warming file and estimated damage function from Question 1 to create four plots
 ###Difference in Damages over Time from Pulse Per Ton of Carbon
-ggplot(data = warming, aes(x = year,y = warming_pulse))+
+ggplot(data = warming, aes(x = year,y = damage_annual_Cost))+
   geom_point()+
   theme_minimal()
 ```
