--- a/Homework 4 Code.Rmd
+++ b/Homework 4 Code.Rmd
@@ -40,7 +40,6 @@ ggplot(data = damages, aes (x = warming, y = damages))+
 ##Read in the warming.csv file
 warming <- read.csv(here("data", "warming.csv"))
 
-
 ```
 
 
@@ -78,33 +77,41 @@ damage_pulse_plot <- ggplot(data = warming_difference, aes(x = year, y = damage_
 damage_pulse_plot
 
 ###Damage difference Over Time without the Pulse
-damage_plot <- ggplot(data = warming_difference, aes(x = year, y = damage_base))+
+damage_difference_plot <- ggplot(data = warming_difference, aes(x = year, y = damage_difference))+
   geom_point()+
   theme_minimal()
 
-damage_plot
-```
+damage_difference_plot
 
-
-```{r}
-#Question 2
-##Use the warming file and estimated damage function from Question 1 to create four plots
-###Difference in Damages over Time from Pulse Per Ton of Carbon
-ggplot(data = warming_difference, aes(x = year,y = damage_annual_cost))+
-  geom_point()+
+###Damage difference over time per ton of carbon
+damage_ton_plot <- ggplot(data = warming_difference, aes(x = year, y = damage_annual_cost)) +
+  geom_point() +
   theme_minimal()
+
+damage_ton_plot
 ```
 
 
 ```{r}
 #Question 3
 ##Create a plot of SCC vs. Discount Rate
-warming_socialcostcarbon <- warming_difference %>% 
-  mutate(Discount1 = ((damage_pulse)/35000000000)/(1+.01)^X,
-         Discount2 = ((damage_pulse)/35000000000)/(1+.02)^X,
-         Discount3 = ((damage_pulse)/35000000000)/(1+.03)^X,
-         Discount4 = ((damage_pulse)/35000000000)/(1+.04)^X,
-         Discount5 = ((damage_pulse)/35000000000)/(1+.05)^X
-         )
+
+
+warming_scc <- warming_difference %>% 
+  mutate(Discount1 = ((sum(warming_scc$damage_annual_cost))/(1+0.01)^80),
+         Discount2 = ((sum(warming_scc$damage_annual_cost))/(1+0.02)^80),
+         Discount3 = ((sum(warming_scc$damage_annual_cost))/(1+0.03)^80),
+         Discount4 = ((sum(warming_scc$damage_annual_cost))/(1+0.04)^80),
+         Discount5 = ((sum(warming_scc$damage_annual_cost))/(1+0.05)^80))
+
+scc_table <- warming_scc %>% 
+  select("Discount1", "Discount2", "Discount3", "Discount4", "Discount5") %>% 
+  select(,2)
+
+scc_table
+
+ggplot(data = warming_scc, aes(x = c[1,2,3,4,5], y = ))
+
+
 ```
 
